# titans_insider

./: .env.example  .gitignore  Cargo.toml  README.md  compose.yaml  down.sh  fresh_start.sh  postgres_secrets.env.example  rebuild_shopsniffer.sh  run.sh  wipe_db.sh
migrations/2024-02-04-065605_create_item_hist/: down.sql  up.sql
src/: main.rs  models.rs  rules.rs  schema.rs  types.rs  yaml_util.rs
src/models/: item.rs  item_hist.rs  rules.rs
src/spec/: openapi.json
src/yaml/: rules.yaml
