[package]
name = "titans_insider"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# [patch.crates-io]
# diesel = { path = "./diesel/diesel" }

[dependencies]
shopsniffer = { path = "../shopsniffer" }
tracing = "0.1"
serde_json = "1.0"
serde_yaml = "0.9"
log = "0.4"
dotenv = "0.15"
glob = "0.3"
strum_macros = "0.26.1"
[dependencies.diesel]
version = "2.1.4"
features = ["r2d2", "postgres"]
[dependencies.serde]
version = "1.0"
features = ["derive"]
[dependencies.chrono]
version = "0.4"
[dependencies.uuid]
version = "1.3"
features = ["v4", "fast-rng"]
[dependencies.tokio]
version = "1.27"
features = ["full"]
[dependencies.tracing-subscriber]
version = "0.3"
features = ["env-filter"]
